# parse_pdfs

./: README.md  pyproject.toml
data/processed/adobe_result/: structuredData.json
data/processed/adobe_result/gpt-are-gpt/tables/: fileoutpart1.xlsx  fileoutpart17.xlsx  fileoutpart3.xlsx  fileoutpart9.xlsx
data/processed/adobe_result/tables/: fileoutpart19.xlsx  fileoutpart21.xlsx  fileoutpart23.xlsx  fileoutpart25.xlsx  fileoutpart27.xlsx  fileoutpart7.xlsx
notebooks/: adobe.ipynb  figure_information_extraction.ipynb  parsing_images.ipynb  parsing_text_tables.ipynb
